[package]
name = "electrum_sync"
version = "0.1.0"
authors = ["Riccardo Casatta <riccardo@casatta.it>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.23.0"
# electrum-client = "0.1.0-beta.5"
# electrum-client = { path = "../rust-electrum-client" }
electrum-client = {  git = "https://github.com/RCasatta/rust-electrum-client", rev="a9455cfb4c0c6c6755b53d403f910649fa4293bb" }
log = "0.4.8"


sled = "0.31.0"
